escape redoc braces

--- a/plop-templates/openapi/web/index.html
+++ b/plop-templates/openapi/web/index.html
@@ -17,9 +17,9 @@
             padding: 0;
         }
     </style>
-    {{{redocHead}}}
+    \{{{redocHead}}}
 </head>
 <body>
-{{{redocHTML}}}
+\{{{redocHTML}}}
 </body>
 </html>
